# curso-cppsfml

./: .gitignore  CMakeLists.txt  README.md
libs/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-system.so.2.5.1  libsfml-window.so.2.5.1
resources/: sounds_link.txt
src/: .clang-format  CMakeLists.txt  Snake.cpp  main.cpp  minecrap.cpp
src/include/: Game.hpp  Snake.hpp  minecrap.hpp
src/resources/: map.txt
tests/: CMakeLists.txt
